--- a/frontend/src/admin/styles/UserManagement.css
+++ b/frontend/src/admin/styles/UserManagement.css
@@ -3,7 +3,6 @@
   background: #f5f5f5;
   min-height: 100vh;
   flex: 1;
-
 }
 .dashboard-container {
   display: flex;
@@ -40,6 +39,7 @@
   gap: 10px;
   margin-bottom: 20px;
   align-items: center;
+  margin-left: 0;
 }
 
 .search-input-container {
@@ -49,12 +49,6 @@
   align-items: center;
 }
 
-.search-icon {
-  position: absolute;
-  left: 12px;
-  color: #666;
-  z-index: 1;
-}
 
 .search-input {
   flex: 1;
@@ -62,6 +56,7 @@
   border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 14px;
+  width: 20vw;
 }
 
 .clear-input-button {
@@ -103,6 +98,7 @@
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   margin-bottom: 20px;
+ 
 }
 
 .users-table {
@@ -269,4 +265,25 @@
   padding: 10px 15px;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.search-containeru{
+  display:flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.date-filter-containeru{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  width: 500px;
+}
+.date-inputu{
+  border: 2px solid blue;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 220px;
 }
