dashboard updated,(totall passenger, self registered passenger and passengers registered by staff)

--- a/frontend/src/admin/styles/Dashboard.css
+++ b/frontend/src/admin/styles/Dashboard.css
@@ -20,6 +20,10 @@
   grid-template-columns: 2fr 1fr;
   gap: 20px;
 }
+.chart-title{
+  margin-bottom: 4%;
+  margin-left: 2%;
+}
 
 .loading-container {
   display: flex;
